src/objects/LBI__ScoringQueue__c.object
<CustomObject>
    <fields>
        <fullName>LBI__ErrorCount__c</fullName>
        <externalId>true</externalId>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ErrorMessageShort__c</fullName>
        <externalId>true</externalId>
        <label>Error Message (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Contains the SFDC+Rule Id of the Lead/Account/Contact and Rule being scored.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>37</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__LatticeBulkScoreRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Bulk Score Request</label>
        <referenceTo>LBI__LatticeBulkScoreRequest__c</referenceTo>
        <relationshipLabel>Lattice Scoring Queues</relationshipLabel>
        <relationshipName>LatticeScoringQueues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__LinkToRecord__c</fullName>
        <formula>IF (
ISBLANK(LBI__RecordId__c),
$Label.lbi__err_noscoredrecordinvolved,
HYPERLINK(&quot;/&quot; &amp; LBI__RecordId__c , $Label.lbi__err_scoredrecord, &quot;_blank&quot;)
)</formula>
        <label>Link to Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Marked as External Id to create a packageable index.</description>
        <externalId>true</externalId>
        <label>Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__RecordId__c</fullName>
        <description>Contains the SFDC Id of the Lead/Account/Contact being scored.</description>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ScoringRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Scoring Rule</label>
        <referenceTo>LBI__ScoringRule__c</referenceTo>
        <relationshipLabel>Lattice Scoring Queues</relationshipLabel>
        <relationshipName>LatticeScoringQueues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unscored</fullName>
                    <default>true</default>
                    <label>Unscored</label>
                </value>
                <value>
                    <fullName>Errored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Scoring Queue</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__Priority__c</columns>
        <columns>LBI__Object__c</columns>
        <columns>LBI__LinkToRecord__c</columns>
        <columns>LBI__Status__c</columns>
        <columns>LBI__LatticeBulkScoreRequest__c</columns>
        <columns>LBI__ScoringRule__c</columns>
        <columns>LBI__ErrorCount__c</columns>
        <columns>LBI__ErrorMessageShort__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LBI__Errored</fullName>
        <columns>NAME</columns>
        <columns>LBI__Priority__c</columns>
        <columns>LBI__Object__c</columns>
        <columns>LBI__LinkToRecord__c</columns>
        <columns>LBI__Status__c</columns>
        <columns>LBI__LatticeBulkScoreRequest__c</columns>
        <columns>LBI__ScoringRule__c</columns>
        <columns>LBI__ErrorCount__c</columns>
        <columns>LBI__ErrorMessageShort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__ErrorCount__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>Errored</label>
    </listViews>
    <listViews>
        <fullName>LBI__NoErrors</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>LBI__Priority__c</columns>
        <columns>LBI__Object__c</columns>
        <columns>LBI__LinkToRecord__c</columns>
        <columns>LBI__Status__c</columns>
        <columns>LBI__LatticeBulkScoreRequest__c</columns>
        <columns>LBI__ScoringRule__c</columns>
        <columns>LBI__ErrorCount__c</columns>
        <columns>LBI__ErrorMessageShort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__ErrorCount__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LBI__ErrorCount__c</field>
            <operation>equals</operation>
        </filters>
        <label>No Errors</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{000000000}</displayFormat>
        <label>Lattice Scoring Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Scoring Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LBI__Count_by_One_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LBI__ErrorCount__c &lt;&gt; 0
, LBI__ErrorCount__c &lt;&gt; PRIORVALUE(LBI__ErrorCount__c)+1
, LBI__ErrorCount__c &lt;&gt; PRIORVALUE(LBI__ErrorCount__c))</errorConditionFormula>
        <errorDisplayField>LBI__ErrorCount__c</errorDisplayField>
        <errorMessage>Error Count can only increment by 1.</errorMessage>
    </validationRules>
</CustomObject>